--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	<h1>SuperSonic</h1>
 
 	<p class="lead">
-    SuperSonic is the next-generation BI platform that integrates <strong>Chat BI</strong> (powered by LLM) and <strong>Headless BI</strong> (powered by semantic layer) paradigms.
+    SuperSonic is the next-generation BI platform that integrates <strong>Chat BI</strong> (powered by LLM) and <strong>Headless BI</strong> (powered by semantic layer) paradigms test
 </p>
 
 <h2 id="features">Features</h2>
