--- a/index.html
+++ b/index.html
@@ -132,11 +132,7 @@
 
 </div>
                 <div class="docs-toc large order-lg-2 order-md-0 order-xs-1 col-12 col-lg-2 col-xl-2 position-sticky border-left"><div class="docs-toc">
-	<nav id="TableOfContents">
-  <ul>
-    <li><a href="#features">Features</a></li>
-  </ul>
-</nav>
+	<nav id="TableOfContents"></nav>
 </div>
 </div>
                 <div class="main col-12 order-1 col-md-9 col-lg-10 col-xl-8 py-3">
@@ -146,11 +142,12 @@
 	<h1>SuperSonic</h1>
 
 	<p class="lead">
-    SuperSonic is the next-generation BI platform that integrates <strong>Chat BI</strong> (powered by LLM) and <strong>Headless BI</strong> (powered by semantic layer) paradigms test
+    SuperSonic is the next-generation BI platform that integrates <strong>Chat BI</strong> (powered by LLM) and <strong>Headless BI</strong> (powered by semantic layer) paradigms
 </p>
 
-<h2 id="features">Features</h2>
-<!-- raw HTML omitted -->
+<figure><img src="/img/supersonic_demo.gif" width="800px">
+</figure>
+
 
 	
 
